fix: Issues with ContextMenus being clipped by parent elements
- Uses a portal to place context menus in the document body now with proper positioning and CSS

--- a/packages/seed-bible/seed-bible/components/ContextMenu/ContextMenu.css
+++ b/packages/seed-bible/seed-bible/components/ContextMenu/ContextMenu.css
@@ -26,7 +26,7 @@
 }
 
 .sb-context-menu {
-  position: absolute;
+  position: fixed;
   width: max-content;
   min-width: 12.5rem;
   max-width: 17.5rem;
