--- a/packages/seed-bible/seed-bible/components/Tabs/Tabs.css
+++ b/packages/seed-bible/seed-bible/components/Tabs/Tabs.css
@@ -1089,9 +1089,6 @@
 }
 
 .sb-tab-menu {
-  position: absolute;
-  right: 0;
-  top: calc(100% + 0.375rem);
   min-width: 13.125rem;
   padding: 0.375rem;
   border: 1px solid var(--sb-secondary-color);
